2005-11-03  Sam Steingold  <sds@gnu.org>

	* mwheel.el (mouse-wheel-down-event, mouse-wheel-up-event): Use
	system-type instead of window-system because window-system is not
	correctly defined during loadup.

2005-11-02  Mark A. Hershberger  <mah@everybody.org>

	* xml.el (xml-syntax-table): Allow xml.el to compile in xemacs.
	(xml-parse-tag): Join strings separated by a comment properly.

2005-11-02  Andreas Schwab  <schwab@suse.de>

	* emacs-lisp/byte-opt.el (byte-optimize-pure-func): Quote the
	folded value.

2005-11-02  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-mouse-until): Make it work in
	diassembly buffer too.
	(gdb-exited): Remove overlay arrows when execution has finished.
	(gdb-info-frames-custom, gdb-info-threads-custom)
	(gdb-info-registers-custom): Don't add inappropriate text
	properties if inferior is not active.

2005-11-02  Glenn Morris  <rgm@gnu.org>

	* progmodes/fortran.el (fortran-blink-match): Use
	`blink-matching-delay'.

2005-11-02  John Mongan <jmongan@mccammon.ucsd.edu>  (tiny change)

	* progmodes/f90.el (f90-match-end): Use `blink-matching-delay'.

2005-11-02  Lars Hansen  <larsh@soem.dk>
	* net/tramp.el (tramp-action-out-of-band): Handle scp message
	"Permission denied".

2005-11-01  Richard M. Stallman  <rms@gnu.org>

	* textmodes/flyspell.el (flyspell-external-point-words):
	Pass nil to flyspell-get-word.

2005-11-02  Kim F. Storm  <storm@cua.dk>

	* menu-bar.el (menu-bar-options-menu): Show "Shift Movement (CUA)"
	item instead of "C-x/C-c/C-v (CUA)" if cua-enable-cua-keys is nil.

2005-11-01  Stefan Monnier  <monnier@iro.umontreal.ca>

	* calendar/cal-menu.el (date, event): Don't declare as dynamic-var.
	(calendar-mouse-holidays, calendar-mouse-view-diary-entries)
	(calendar-mouse-print-dates): Add optional `event' argument.
	Update interactive-spec.
	(calendar-mouse-cal-tex-menu, cal-tex-mouse-filofax):
	Use `calendar-event-to-date' instead of `event'.

2005-11-02  Masatake YAMATO  <jet@gyve.org>
